# utopia

./: .gitignore  Cargo.toml  README.md
benches/: 2009_crafted.csv  2011_application.csv  bench.py
src/: cnf.rs  dimacs.rs  lib.rs  preprocessor.rs
src/solver/: branching.rs  clause_database.rs  clause_learning.rs  config.rs  ema_policy.rs  inprocessor.rs  literal_watcher.rs  literal_watching.rs  mod.rs  progress.rs  proof_logger.rs  restarts.rs  state.rs  statistics.rs  trail.rs  unit_propagation.rs
src/solver/heuristic/: basic.rs  decay.rs  mod.rs  vmtf.rs  vsids.rs
testfiles/debugging_testfiles/sat/: test01.cnf  test02.cnf  test04.cnf  test07.cnf
testfiles/debugging_testfiles/unsat/: test03.cnf  test05.cnf  test06.cnf
testfiles/hashi_testfiles/sat/: test01.cnf  test02_size20.cnf  test03_size10.cnf  test05_size03.cnf
testfiles/hashi_testfiles/unsat/: test04_size03.cnf
testfiles/lecture_testfiles/sat/: ssa7552-038.cnf  ssa7552-158.cnf  ssa7552-159.cnf  ssa7552-160.cnf  uf50-010.cnf  uf50-011.cnf  uf50-012.cnf  uf50-013.cnf  uf50-014.cnf  uf50-015.cnf  uf50-016.cnf  uf50-017.cnf  uf50-018.cnf  uf50-019.cnf  uf50-04.cnf  uf50-05.cnf  uf50-06.cnf  uf50-07.cnf  uf50-08.cnf  uf50-09.cnf
testfiles/lecture_testfiles/test/sat/: count4_2.cnf  count6_2.cnf  count6_3.cnf  hole5_5.cnf  kcolor.cnf  matching4_3.cnf  matching6_4.cnf  parity4.cnf  rand6.cnf  tent4_4.cnf  unique.cnf  unit.cnf
testfiles/lecture_testfiles/test/unsat/: count7_2.cnf  hole2.cnf  hole5.cnf  (+8 more)
testfiles/lecture_testfiles/unsat/: ssa0432-003.cnf  ssa2670-130.cnf  ssa2670-141.cnf  ssa6288-047.cnf
